# my-agent

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  _typos.toml  cliff.toml  deny.toml
examples/: tavily_search.rs
prompting/: CoT.txt  language.txt  react_prompt.txt
src/: lib.rs  main.rs
src/agent/: agent.rs  language.rs  mod.rs  react_agent.rs  react_agent_config.rs  response.rs
src/memory/: mod.rs  short_memory.rs
src/planning/: mod.rs  planning.rs
src/planning/template/: react_response_format.txt  react_system_prompt.txt
src/template/: react_response_format.txt  react_system_prompt.txt
src/tools/: mod.rs  tool_code_interpreter.rs  tool_do_nothing.rs  tool_execute.rs  tool_file_append.rs  tool_file_write.rs  tool_finish.rs  tool_search.rs  tool_traits.rs  tools.rs
src/tools/search/: mod.rs  tavily.rs
templates/: fix_response_format.prompt  response_format.prompt  system.prompt
