[package]
name = "my-agent"
version = "0.1.0"
authors = ["Jeff <fei.code@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-openai = "0.23.4"
async-stream = "0.3.5"
derive_builder = "0.20.0"
futures = "0.3.30"
url = "2.5.2"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.121"
dotenvy = "0.15.7"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
